--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://hottomatosummer.com/" />
     <meta property="og:title" content="Duke's Hot Tomato Summer" />
     <meta property="og:description" content="HOT TOMATO SUMMER IS COMING TO TOWN!!! You're invited - Duke's is back at it with year 3 of Hot Tomato Summer, a weeklong celebration of local restaurants dishing out Duke's and tomato recipes. Sign up to join in the fun with your signature recipe, compete for awards, and of course, swag for (summer) days." />
-    <meta property="og:image" content="https://hottomatosummer.com/assets/UniversalHTSLogo.png" />
+    <meta property="og:image" content="https://hottomatosummer.com/assets/HTSLogo%20(png)-DK7Dw7ck.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://hottomatosummer.com/" />
     <meta property="twitter:title" content="Duke's Hot Tomato Summer" />
     <meta property="twitter:description" content="HOT TOMATO SUMMER IS COMING TO TOWN!!! You're invited - Duke's is back at it with year 3 of Hot Tomato Summer, a weeklong celebration of local restaurants dishing out Duke's and tomato recipes. Sign up to join in the fun with your signature recipe, compete for awards, and of course, swag for (summer) days." />
-    <meta property="twitter:image" content="https://hottomatosummer.com/assets/UniversalHTSLogo.png" />
+    <meta property="twitter:image" content="https://hottomatosummer.com/assets/HTSLogo%20(png)-DK7Dw7ck.png" />
        
    
 
