--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     <meta property="twitter:description" content="HOT TOMATO SUMMER IS COMING TO TOWN!!! You're invited - Duke's is back at it with year 3 of Hot Tomato Summer, a weeklong celebration of local restaurants dishing out Duke's and tomato recipes. Sign up to join in the fun with your signature recipe, compete for awards, and of course, swag for (summer) days." />
 
     <meta property="twitter:image" content="https://hottomatosummer.com/assets/UniversalHTSLogo-DK7Dw7ck.png" />
-       
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HKWFLNHQ5Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-HKWFLNHQ5Q');
+</script>
   </head>
   <body>
     <div id="root"></div>
