--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <meta name="description" content="HOT TOMATO SUMMER IS COMING TO TOWN!!! You're invited - Duke's is back at it with year 3 of Hot Tomato Summer, a weeklong celebration of local restaurants dishing out Duke's and tomato recipes. Sign up to join in the fun with your signature recipe, compete for awards, and of course, swag for (summer) days." />
    
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://nrxlinkewxiebsciiwdc.supabase.co/ https://www.google-analytics.com/analytics.js;
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://nrxlinkewxiebsciiwdc.supabase.co/ https://www.google-analytics.com/;
     img-src data: https: http:;
     script-src 'self' https://www.google-analytics.com/analytics.js https://www.googletagmanager.com/ 'unsafe-inline';
     style-src 'self' 'unsafe-inline'; "/>
