Golden Tomato Foode

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://nrxlinkewxiebsciiwdc.supabase.co/ https://www.google-analytics.com/;
     img-src data: https: http:;
-    script-src 'self' https://www.google-analytics.com/analytics.js https://www.googletagmanager.com/ 'unsafe-inline';
+    script-src 'self' https://www.google-analytics.com/analytics.js https://www.googletagmanager.com/ ;
     style-src 'self' 'unsafe-inline'; "/>
     <!-- Google / Facebook -->
     <meta property="og:type" content="website" />
