updated meta data

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Duke's Hot Tomato Summer" />
     
-    <meta name="description" content="HOT TOMATO SUMMER IS COMING TO TOWN!!! You're invited - Duke's is back at it with year 3 of Hot Tomato Summer, a weeklong celebration of local restaurants dishing out Duke's and tomato recipes. Sign up to join in the fun with your signature recipe, compete for awards, and of course, swag for (summer) days." />
+    <meta name="description" content="Duke's Hot Tomato Summer is here. From July 18-28 enjoy tomato & mayo specials at participating restaurants across 6 southern markets. " />
    
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://nrxlinkewxiebsciiwdc.supabase.co/ wss://nrxlinkewxiebsciiwdc.supabase.co/ https://www.google-analytics.com/;
     img-src data: https: http:;
@@ -17,14 +17,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hottomatosummer.com/" />
     <meta property="og:title" content="Duke's Hot Tomato Summer" />
-    <meta property="og:description" content="HOT TOMATO SUMMER IS COMING TO TOWN!!! You're invited - Duke's is back at it with year 3 of Hot Tomato Summer, a weeklong celebration of local restaurants dishing out Duke's and tomato recipes. Sign up to join in the fun with your signature recipe, compete for awards, and of course, swag for (summer) days." />
+    <meta property="og:description" content="Duke's Hot Tomato Summer is here. From July 18-28 enjoy tomato & mayo specials at participating restaurants across 6 southern markets. " />
     <meta property="og:image" content="https://hottomatosummer.com/assets/HTSLogo%20(png)-DK7Dw7ck.png" />
   
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://hottomatosummer.com/" />
     <meta property="twitter:title" content="Duke's Hot Tomato Summer" />
-    <meta property="twitter:description" content="HOT TOMATO SUMMER IS COMING TO TOWN!!! You're invited - Duke's is back at it with year 3 of Hot Tomato Summer, a weeklong celebration of local restaurants dishing out Duke's and tomato recipes. Sign up to join in the fun with your signature recipe, compete for awards, and of course, swag for (summer) days." />
+    <meta property="twitter:description" content="Duke's Hot Tomato Summer is here. From July 18-28 enjoy tomato & mayo specials at participating restaurants across 6 southern markets. " />
 
     <meta property="twitter:image" content="https://hottomatosummer.com/assets/HTSLogo%20(png)-DK7Dw7ck.png" />
 <!-- Google tag (gtag.js) -->
