want to see how many times renders

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     
     <meta name="description" content="Duke's Hot Tomato Summer is here. From July 18-28 enjoy tomato & mayo specials at participating restaurants across 6 southern markets. " />
    
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://nrxlinkewxiebsciiwdc.supabase.co/ wss://nrxlinkewxiebsciiwdc.supabase.co/ https://www.google-analytics.com/;
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' https://nrxlinkewxiebsciiwdc.supabase.co/ wss://nrxlinkewxiebsciiwdc.supabase.co/ https://www.google-analytics.com/;
     img-src data: https: http:;
     script-src 'self' https://www.google-analytics.com/analytics.js https://www.googletagmanager.com/ 'unsafe-inline';
-    style-src 'self' 'unsafe-inline'; "/> -->
+    style-src 'self' 'unsafe-inline'; "/> 
     <!-- Google / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hottomatosummer.com/" />
